--- a/test/fixtures/topics.yml
+++ b/test/fixtures/topics.yml
@@ -3,6 +3,8 @@
 # Table name: topics
 #
 #  id         :uuid             not null, primary key
+#  content    :text
+#  embedding  :vector
 #  slug       :string
 #  summary    :text
 #  title      :string           not null
