--- a/package.json
+++ b/package.json
@@ -2,5 +2,6 @@
   "dependencies": {
     "daisyui": "^3.6.3",
     "tailwind-scrollbar-hide": "^1.1.7"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
