--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for readx on 2023-08-29T16:20:22+08:00
+# fly.toml app configuration file generated for readx on 2023-08-29T21:57:33+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -7,8 +7,6 @@ app = "readx"
 primary_region = "hkg"
 console_command = "/rails/bin/rails console"
 
-[build]
-
 [processes]
   app = "./bin/rails server"
   sidekiq = "bundle exec sidekiq"
@@ -16,7 +14,7 @@ console_command = "/rails/bin/rails console"
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
