--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -1,3 +1,6 @@
 stories_collect_from_google_job:
   cron: "*/15 * * * *" # every 15 minutes
   class: "Stories::CollectFromGoogleJob"
+stories_collect_blogs_from_google_job:
+  cron: "0 * * * *" # every hour
+  class: "Stories::CollectBlogsFromGoogleJob"
